[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Theme.tres" type="Theme" id=1]
[ext_resource path="res://GFX/Interface/PNG/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://GFX/Interface/PNG/metalPanel.png" type="Texture" id=3]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_redCorner.png" type="Texture" id=7]
[ext_resource path="res://GFX/Interface/PNG/dotRed.png" type="Texture" id=8]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_blueCorner.png" type="Texture" id=9]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_greenCorner.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Numpad.gd" type="Script" id=11]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Numpad" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -472.0
margin_bottom = -260.0
rect_min_size = Vector2( 300, 400 )
theme = ExtResource( 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 25.0
margin_right = -10.0
margin_bottom = -25.0
custom_constants/separation = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="CenterContainer" parent="NinePatchRect/VBoxContainer"]
margin_right = 280.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 140, 183 )

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/VBoxContainer/DisplayContainer"]
margin_left = 15.0
margin_right = 265.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="DisplayLabel" type="Label" parent="NinePatchRect/VBoxContainer/DisplayContainer"]
margin_left = 122.0
margin_top = 32.0
margin_right = 158.0
margin_bottom = 67.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 134.0
margin_right = 280.0
margin_bottom = 330.0

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/VBoxContainer/CenterContainer"]
margin_left = 68.0
margin_right = 212.0
margin_bottom = 196.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 3

[node name="Button1" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Button2" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 52.0
margin_right = 92.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"

[node name="Button3" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 104.0
margin_right = 144.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"

[node name="Button4" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 52.0
margin_right = 40.0
margin_bottom = 92.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"

[node name="Button5" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 52.0
margin_top = 52.0
margin_right = 92.0
margin_bottom = 92.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"

[node name="Button6" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 104.0
margin_top = 52.0
margin_right = 144.0
margin_bottom = 92.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "6"

[node name="Button7" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 104.0
margin_right = 40.0
margin_bottom = 144.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "7"

[node name="Button8" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 52.0
margin_top = 104.0
margin_right = 92.0
margin_bottom = 144.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8"

[node name="Button9" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 104.0
margin_top = 104.0
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"

[node name="PadLightTexture" type="TextureRect" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 156.0
margin_right = 40.0
margin_bottom = 196.0
texture = ExtResource( 8 )
expand = true

[node name="Button10" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 52.0
margin_top = 156.0
margin_right = 92.0
margin_bottom = 196.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ButtonOK" type="Button" parent="NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 104.0
margin_top = 156.0
margin_right = 144.0
margin_bottom = 196.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
